--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hexcolor: ^3.0.1
   bordered_text: ^2.0.0
   font_awesome_flutter: ^10.2.1
+  flutter_inset_box_shadow: ^1.0.8
 
 dev_dependencies:
   flutter_test:
