--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
   json_serializable: ^6.5.4
+  flutter_animate: ^2.0.1
 
 dev_dependencies:
   flutter_test:
