--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_animate: ^2.0.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  firebase_core: ^2.3.0
 
 dev_dependencies:
   flutter_test:
