--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.6.0
+version: 0.6.1
 
 environment:
   sdk: ">=2.18.1 <3.0.0"
@@ -53,6 +53,7 @@ dependencies:
   dropdown_button2: ^1.9.1
   uuid: ^3.0.7
   flutter_guid: ^0.3.1
+  flutter_launcher_icons: ^0.11.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,17 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.3.2
 
+flutter_icons:
+  image_path: "assets/logo.png"
+  android: true
+  ios: true
+  adaptive_icon_foreground: "assets/logo.png"
+  adaptive_icon_background: "#1C1826"
+  web:
+    generate: true
+    image_path: "assets/logo.png"
+    background_color: "#1C1826"
+    theme_color: "#423B52"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
