--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.6.1
+version: 0.6.3
 
 environment:
   sdk: ">=2.18.1 <3.0.0"
@@ -54,6 +54,7 @@ dependencies:
   uuid: ^3.0.7
   flutter_guid: ^0.3.1
   flutter_launcher_icons: ^0.11.0
+  rename: ^2.0.1
 
 dev_dependencies:
   flutter_test:
